--- a/login.css
+++ b/login.css
@@ -2,18 +2,13 @@ html,
 body {
   width: 100%;
   height: 100%;
-  background: -webkit-linear-gradient(
-    25deg,
-    #ffbe0b,
-    #fb5607,
-    #ff006e,
-    #8338ec,
-    #3a86ff
-  );
-
+  
+  
   display: flex;
   justify-content: center;
   align-items: center;
+  background-image:url(https://blog.inevent.com/wp-content/uploads/2020/12/15_amazing_corporate_gifting_ideas_to_wow_your_clients_and_employees.png);
+  background-size:cover;
 }
 
 * {
@@ -53,16 +48,10 @@ body {
   padding-top: 30px;
 
   border-bottom: 1px solid transparent;
-  border-image: -webkit-linear-gradient(
-      25deg,
-      #ffbe0b,
-      #fb5607,
-      #ff006e,
-      #8338ec,
-      #3a86ff
-    )
-    20;
-  background: #000;
+  
+   
+  background: #feebf6;
+  color:#370617;
 }
 
 #form_header {
@@ -72,17 +61,11 @@ body {
   font-weight: 900;
   text-transform: uppercase;
   letter-spacing: 1px;
+  background: #feebf6;
 
-  background: -webkit-linear-gradient(
-    25deg,
-    #ffbe0b,
-    #fb5607,
-    #ff006e,
-    #8338ec,
-    #3a86ff
-  );
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
+  
+
+  color: #370617;
 }
 
 #form_content_container {
@@ -109,15 +92,15 @@ body {
 
 input {
   width: 100%;
-  height: 40px;
+  height: 50px;
 
   padding-left: 10px;
-  margin-bottom: 20px;
+  margin-bottom: 25px;
 
-  background: #000;
+  background: #fff;
   font-family: Montserrat;
   font-weight: 500;
-  color: #fff;
+  color: black;
   font-size: 12px;
 
   border-bottom: 2px solid transparent;
@@ -125,31 +108,36 @@ input {
   border-top-right-radius: 2%;
   border-image: -webkit-linear-gradient(
       25deg,
-      #ffbe0b,
-      #fb5607,
-      #ff006e,
-      #8338ec,
-      #3a86ff
+      #ffe8e5,
+      #ff7cbf,
+     
+      #feebf6,
+      #ffffff,
+      #ff103c,
+      #891026
     )
     1;
 }
 
 #button_container {
   width: 100%;
-  height: 10%;
+  height: 12%;
 
   background-image: linear-gradient(
     80deg,
-    #ffbe0b,
-    #fb5607 50%,
-    #ff006e 50%,
-    #8338ec
+    #feebf6,
+    #f7bab8,
+    
+   
+    
+    #d02537
+ 
   );
-  color: #fff;
+  color: #feebf6;
 
   float: left;
 
-  margin-top: 70px;
+  margin-top: 80px;
 }
 
 #button_container button {
@@ -172,7 +160,6 @@ input {
   align-items: center;
 }
 
-
 a {
-  color: white;
+    color: #d02537;
 }
